--- a/portfolio/css/portfolio.css
+++ b/portfolio/css/portfolio.css
@@ -1,107 +1,11 @@
-body {
-  font-family: '나눔고딕', NanumGothic, Dotum, sans-serif;
-}
-
-.header {
-  z-index: 100;
-  border-bottom: 1px solid black;
-  background: #000;
-  height: 120px;
-}
-
-.area_flex {
-  position: relative;
-  margin: 0 auto;
-  width: 1080px;
-  height: 100%;
-
-}
-
-.area_contents {
-  position:relative;
-  margin: 0 auto;
-  height: 100%;
-  background: pink;
-}
-.vertical-align {
-  display: table-cell;
-  vertical-align: middle;
-}
-.area_contents p{
-  font-size: 40px;
-  color: #fff;
-  font-weight: bold;
-  padding-left: 40px;
-}
-
-.container {
-  margin: 0 auto;
-  width: 1080px;
-  text-align: left;
-  background: yellow;
-  height:500px;
-}
-
-
-<!--  프로젝트 c 파트 리셋 초기화 -->
-
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-body {
-    line-height: 1;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-<!-- project c test.css -->
-
 @charset "utf-8";
+
 /* common */
 body {
+
   margin: 0;
   padding: 0;
-  font-family: -apple-system,BlinkMacSystemFont,helvetica,Apple SD Gothic Neo,'굴림',gulim,sans-serif;
+  font-family: '나눔 고딕', NanumGothic, '돋움', Dotum, sans-serif!important;
   text-align: left;
   font-size: 13px;
   line-height:20px;
@@ -109,461 +13,7 @@ body {
 }
 
 html[data-useragent*=mac] body * {
-  font-family: 'Apple SD Gothic NEO',helvetica,sans-serif!important
-}
-
-input,select,textarea {
-  font-family: -apple-system,BlinkMacSystemFont,helvetica,Apple SD Gothic Neo,'굴림',gulim,sans-serif;
-  font-size: 13px;
-  color: #000
-}
-
-address,dd,div,dl,dt,em,fieldset,form,h1,h2,h3,h4,iframe,input,li,object,ol,p,select,textarea,ul {
-  margin: 0;
-  padding: 0
-}
-
-img{
-  vertical-align: top;
-}
-fieldset,iframe,img {
-  border: none
-}
-
-iframe {
-  display: block
-}
-
-ol,ul {
-  list-style-type: none
-}
-
-table {
-  clear: both;
-  border-collapse: collapse
-}
-
-address,em {
-  font-style: normal
-}
-
-select {
-  height: 20px;
-  font-size: 12px
-}
-
-input {
-  padding-right: 1px
-}
-
-.ipad input[type=text],button,input[type=button],input[type=image],input[type=submit],textarea {
-  -webkit-appearance: none;
-  -webkit-text-size-adjust: none;
-  -webkit-border-radius: 0
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0.1);
-}
-
-table {
-  border-collapse: collapse;
-}
-
-table caption {
-  display: none !important;
-}
-.blind {
-  overflow: hidden!important;
-  position: absolute!important;
-  clip: rect(0 0 0 0)!important;
-  width: 1px!important;
-  height: 1px!important;
-  margin: -1px!important
-}
-
-/* rset */
-
-p {
-  width: 200px;
-  background-color: yellow;
-  font-size: 16px;
-  line-height: 20px;
-}
-.elip1 {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-.elip2 {
-  max-height: 40px; /* webkit 외 브라우저 대응, line-height*line수 */
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-}
-.elip3 {
-  max-height: 60px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
-}
-
-
-
-/* thumb */
-
-section{
-	overflow: hidden;
-	max-width: 900px;
-	margin: 50px auto;
-}
-.list{
-	margin: -5px;
-	overflow:hidden;
-}
-.list li{
-	float:left;
-	width: 20%;
-}
-
-/* !중요 사이간격 조정하기 */
-.inner{
-	display:block;
-	margin: 5px;
-	border:1px solid #000;
-}
-
-.thumb img{
-	width: 100%;
-	height: auto;
-	vertical-align: top;
-}
-.title{
-	overflow:hidden;
-	padding: 5px 0;
-	text-align:center;
-	font-size: 14px;
-	color:#555;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-}
-
-
-
-/* form  setting*/
-input[type="text"],
-input[type="password"] {
-    width: 198px;
-    height: 38px;
-    line-height: 38px;
-    border: 1px solid #ddd;
-    font-size: 15px;
-    text-indent: 10px;
-    color: #000;
-}
-
-textarea {
-    width: 280px;
-    height: 130px;
-    padding: 9px;
-    border: 1px solid #ddd;
-    font-size: 15px;
-    resize: none;
-    color: #000;
-}
-
-
-////////////////////////////////////////////////////////////////////
-2019/9/20
-/////////////////////////////////////////////////////////////////////
-
-
-
-@charset "utf-8";
-/* common */
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system,BlinkMacSystemFont,helvetica,Apple SD Gothic Neo,'굴림',gulim,sans-serif;
-  text-align: left;
-  font-size: 13px;
-  line-height:20px;
-  color: #000
-}
-
-html[data-useragent*=mac] body * {
-  font-family: 'Apple SD Gothic NEO',helvetica,sans-serif!important
-}
-
-input,select,textarea {
-  font-family: -apple-system,BlinkMacSystemFont,helvetica,Apple SD Gothic Neo,'굴림',gulim,sans-serif;
-  font-size: 13px;
-  color: #000
-}
-
-address,dd,div,dl,dt,em,fieldset,form,h1,h2,h3,h4,iframe,input,li,object,ol,p,select,textarea,ul {
-  margin: 0;
-  padding: 0
-}
-
-img{
-  vertical-align: top;
-}
-fieldset,iframe,img {
-  border: none
-}
-
-iframe {
-  display: block
-}
-
-ol,ul {
-  list-style-type: none
-}
-
-table {
-  clear: both;
-  border-collapse: collapse
-}
-
-address,em {
-  font-style: normal
-}
-
-select {
-  height: 20px;
-  font-size: 12px
-}
-
-input {
-  padding-right: 1px
-}
-
-.ipad input[type=text],button,input[type=button],input[type=image],input[type=submit],textarea {
-  -webkit-appearance: none;
-  -webkit-text-size-adjust: none;
-  -webkit-border-radius: 0
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0.1);
-}
-
-table {
-  border-collapse: collapse;
-}
-
-table caption {
-  display: none !important;
-}
-
-
-.blind {
-  overflow: hidden!important;
-  position: absolute!important;
-  clip: rect(0 0 0 0)!important;
-  width: 1px!important;
-  height: 1px!important;
-  margin: -1px!important
-}
-
-/* rset */
-
-hr {
-  margin: 0px 20px;
-}
-
-a{
-  text-decoration: none;
-}
-
-header{
-  overflow:hidden;
-  background-color:#fff;
-  padding: 20px 20px 0px 20px;
-}
-
-.logo{
-  float:left;
-  font-size: 20px;
-  color:black;
-}
-
-/* display none 속성시 감춤 */
-
-nav{
-  display: block;
-  position: absolute;
-  top: 60px;
-  left:0;
-  bottom: 0;
-  /* z-index: 10; */
-  width: 100%;
-  height: 128px;
-  margin:10px 0px 10px 0px;
-  padding: 10px 0px 10px 0px;
-  background-color: #fff;
-
-}
-nav a{
-  text-align: center;
-  display: block;
-  margin:10px 0px 10px 0px;
-  font-size: 25px;
-  height: 36px;
-  color:black;
-}
-
-nav a:hover{
-  font-weight: bold;
-}
-
-footer{
-  height: 50px;
-  line-height: 50px;
-  text-align:center;
-  background-color:#ccc;
-  font-size: 14px;
-  color:#000;
-}
-
-/* logotexthidden */
-.FoodWith_logo {
-  display: block;
-  overflow: hidden;
-  width: 114px;
-  height: 50px;
-  background-position: -4px -4px;
-  text-indent: 101%;
-  white-space: nowrap;
-  background: url("../img/logo_m.png") no-repeat;
-  background-size: 100px 35px;
-}
-
-.lg_aside {
-  position: absolute;
-  top: 12px;
-  right: 0;
-  width: 64px;
-  height: 49px;
-}
-
-.lg_ham{
-  width:46px;
-  height:50px;
-  background-position:-30px -325px;
-  display:block;
-  overflow:hidden;
-  margin:12px 0px 0px 0px;
-  background: url(../img/icon_menu.png);
-  background-repeat: no-repeat;
-}
-
-
-.banner_area{
-  text-align: -webkit-center;
-  background: #ffee02;
-  margin: 20px 10px 10px 10px;
-}
-
-
-
-/* 말줄임 */
-p {
-  width: 275px;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-
-/* webkit 외 브라우저 대응, line-height*line수 */
-.elip2 {
-  max-height: 55px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-  line-height: 28px;
-  font-weight: bold;
-  font-size: 22px;
-  color: #333;
-}
-
-/* 기본 이미지 */
-.author_img{
-  position: relative;
-  border-radius: 50%;
-  background-image: url(../img/thumbnail_profile_none.jpg);
-  width: 40px;
-  height: 40px;
-  background-size: cover;
-}
-
-/* 사용자 이미지 */
-.img-cover{
-  position: relative;
-  border-radius: 50%;
-  background-image: url(../img/thumbnail_profile.jpg);
-  width: 40px;
-  height: 40px;
-  background-size: cover;
-  z-index:1;
-}
-
-
-
-.banner_area ul {
-  display: inline-block;
-  width:100%;
-  table-layout: fixed;
-  margin: 0px 0px 20px 0px;
-}
-.banner_area li {
-  font-size: 16px;
-  color: #333;
-  margin: 0px 5px 0px 0px;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-
-
-/*
-.thumb{
-  display: table-cell;
-  width: 100px;
-}
- */
-
-
-
-/////////////////////////////////////////////////////////////////////920
-
-
-
-@charset "utf-8";
-/* common */
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system,BlinkMacSystemFont,helvetica,Apple SD Gothic Neo,'굴림',gulim,sans-serif;
-  text-align: left;
-  font-size: 13px;
-  line-height:20px;
-  color: #000
-}
-
-html[data-useragent*=mac] body * {
-  font-family:'나눔 고딕', NanumGothic, '돋움', Dotum, sans-serif!important
+  font-family:'나눔 고딕', NanumGothic, '돋움', Dotum, sans-serif!important;
 }
 
 input,select,textarea {
@@ -572,6 +22,10 @@ input,select,textarea {
   color: #000
 }
 
+input {
+  padding-right: 0px !important;
+}
+
 address,dd,div,dl,dt,em,fieldset,form,h1,h2,h3,h4,iframe,input,li,object,ol,p,select,textarea,ul {
   margin: 0;
   padding: 0
@@ -582,6 +36,9 @@ img{
 }
 fieldset,iframe,img {
   border: none
+}
+fieldset {
+  height: -webkit-fill-available;
 }
 
 iframe {
@@ -610,6 +67,8 @@ input {
   padding-right: 1px
 }
 
+button {padding: 0px;}
+
 .ipad input[type=text],button,input[type=button],input[type=image],input[type=submit],textarea {
   -webkit-appearance: none;
   -webkit-text-size-adjust: none;
@@ -630,6 +89,11 @@ table caption {
   display: none !important;
 }
 
+select { border-radius:0; /* 아이폰 사파리 보더 없애기 */
+  -webkit-appearance:none; /* 화살표 없애기 for chrome*/
+  -moz-appearance:none; /* 화살표 없애기 for firefox*/
+  appearance:none /* 화살표 없애기 공통*/
+}
 
 .blind {
   overflow: hidden!important;
@@ -640,279 +104,193 @@ table caption {
   margin: -1px!important
 }
 
-/* rset */
+/* css reset  end*/
 
 
-header{
-  overflow:hidden;
-  background-color:#fff;
-  padding: 20px 20px 0px 20px;
+
+.gnb_menu {
+  display: none;
 }
 
-.logo{
-  float:left;
-  font-size: 20px;
-  color:black;
-}
+.wrap {max-width:988px; margin: 0 auto;}
 
-/* display none 속성시 감춤 */
+header{background-color: #fff; }
 
-nav{
+header:after {
+  clear: both;
+  content: '';
   display: block;
-  position: absolute;
-  top: 60px;
-  left:0;
-  bottom: 0;
-  /* z-index: 10; */
+}
+
+header h1{line-height: 70px; float:left; background-image: url("../img/logo_pc.png"); background-repeat: no-repeat;
+width: 114px; height: 70px; background-position: center; }
+
+header.item_link {position: relative; display: block;}
+
+.menu{float:right;}
+
+.menu li {float:left; color: #333; font-size:22px;  padding: 0px 18px 0px 18px; }
+
+.menu a {line-height: 70px;}
+
+
+li:nth-last-child( 1 ) {padding-right: 0px;}
+
+.menu li:hover {font-weight: bold;}
+
+/* header end */
+
+
+
+
+
+section { background:pink; font-size: 14px;color:#666; padding: 40px 0px;}
+
+
+section h1 {
+  font-size: 36px; color: #333;
   width: 100%;
-  height: 128px;
-  margin:10px 0px 10px 0px;
-  padding: 10px 0px 10px 0px;
-  background-color: #fff;
-
-}
-nav a{
-  text-align: center;
-  display: block;
-  margin:10px 0px 10px 0px;
-  font-size: 25px;
-  height: 36px;
-  color:black;
-}
-
-nav a:hover{
-  font-weight: bold;
-}
-
-/* footer{
-height: 50px;
-line-height: 50px;
-text-align:center;
-background-color:#ccc;
-font-size: 14px;
-color:#000;
-} */
-
-
-/* logotexthidden */
-.FoodWith_logo {
-  display: block;
-  overflow: hidden;
-  width: 114px;
+  margin-bottom: 40px;
+  float: left;
   height: 50px;
-  background-position: -4px -4px;
-  text-indent: 101%;
-  white-space: nowrap;
-  background: url("../img/logo_m.png") no-repeat;
-  background-size: 100px 35px;
+  line-height: 50px;
 }
 
-
-.lg_aside {
-  position: absolute;
-  top: 12px;
-  right: 0;
-  width: 64px;
-  height: 49px;
+section .info {
+  height: 140px;
 }
 
-.lg_ham{
-  width:46px;
-  height:50px;
-  background-position:-30px -325px;
-  display:block;
-  overflow:hidden;
-  margin:12px 0px 0px 0px;
-  background: url(../img/icon_menu.png);
-  background-repeat: no-repeat;
+section ul {
+  float: left;
+  margin-right: 200px;
+  margin-bottom: 10px;
 }
 
-.banner_area{
-  text-align: -webkit-center;
-  background: #ffee02;
-  margin: 20px 10px 10px 10px;
+section li {
+  display:  inline-block;
+  width:100px;
 }
 
-
-
-/* 말줄임 */
-p {
-  width: 275px;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-/* webkit 외 브라우저 대응, line-height*line수 */
-.elip2 {
-  max-height: 55px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-  line-height: 28px;
-  font-weight: bold;
-  font-size: 22px;
-  color: #333;
-  margin: 0px 35px;
-}
-
-hr {
-  margin: 0px 20px;
-}
-
-/* 기본 이미지 */
-.author_img{
-  position: relative;
-  border-radius: 50%;
-  background-image: url(../img/thumbnail_profile_none.jpg);
-  width: 40px;
-  height: 40px;
-  background-size: cover;
-}
-
-/* 사용자 이미지 */
-.img-cover{
-  position: relative;
-  border-radius: 50%;
-  background-image: url(../img/thumbnail_profile.jpg);
-  width: 40px;
-  height: 40px;
-  background-size: cover;
-  z-index:1;
-}
-
-
-.banner_area ul {
-  display: inline-block;
-  width:100%;
-  table-layout: fixed;
-  margin: 0px 0px 20px 0px;
-}
-.banner_area li {
-  font-size: 16px;
-  color: #333;
-  margin: 0px 5px 0px 0px;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-
-/* .thumb{
-
-} */
-
-.highlight {
-  display: flex;
-
-}
-
-.highlights .content {
-  background: #f0f0f0;
-  padding: 2rem;
-  font-size: 14px;
-  color: #333;
-}
-
-.more_item{
-  margin: 15px;
-  border: 1px solid black;
-  text-align:center;
-  font-size: 16px;
-  color: #333;
-  
+section h3 {
+  margin-top: 40px;
 }
 
 
 
 
-
-/* .gnb_menu{
-position: absolute;
-top: 20px;
-right:10px;
-display: block;
-width: 46px;
-height: 50px;
-font-size: 1px;
-color: transparent;
-background: linear-gradient(#aaa 20%, transparent 10%);
-background-size: 100% 20px;
-} */
-
-/* form  setting*/
-/* input[type="text"],
-input[type="password"] {
-width: 198px;
-height: 38px;
-line-height: 38px;
-border: 1px solid #ddd;
-font-size: 15px;
-text-indent: 10px;
-color: #000;
+section:after {
+  display: block;
+  content: '';
+  clear: both;
 }
 
-textarea {
-width: 280px;
-height: 130px;
-padding: 9px;
-border: 1px solid #ddd;
-font-size: 15px;
-resize: none;
-color: #000;
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .gnb_menu{
-position: absolute;
-top: 20px;
-right:10px;
-display: block;
-width: 46px;
-height: 50px;
-font-size: 1px;
-color: transparent;
-background: linear-gradient(#aaa 20%, transparent 10%);
-background-size: 100% 20px;
-} */
-
-/* form  setting*/
-/* input[type="text"],
-input[type="password"] {
-width: 198px;
-height: 38px;
-line-height: 38px;
-border: 1px solid #ddd;
-font-size: 15px;
-text-indent: 10px;
-color: #000;
+.number_txt {
+  font-family: tahoma, sans-serif;
 }
 
-textarea {
-width: 280px;
-height: 130px;
-padding: 9px;
-border: 1px solid #ddd;
-font-size: 15px;
-resize: none;
-color: #000;
-} */
+
+.cross_bar {border: 1px solid #c1c1c1; float: left; width: 100%;}
 
 
+/* notice_end */
+
+footer {height:100px;background:#fff; text-align: center;font-size: 14px;color:#333;}
+
+footer ul { display: inline-block; line-height: 50px; font-size: 14px; color:#333; }
+
+footer li { float: left; margin-left: 30px; }
+
+
+.detail_contents a:nth-child(n+1) {
+  margin-left: 10px;
+}
+
+.vertical_bar {
+  width: 10px;
+}
+
+footer ul:after {
+  display: block;
+  clear:both;
+  content:'';
+}
+
+footer li:first-child {margin-left: 0px;}
+
+/* footer end */
+
+
+
+
+
+
+
+@media (min-width: 768px)  and (max-width: 1022px){
+
+  .wrap { padding-left: 15px; padding-right: 15px;}
+  header .wrap {padding-left: 0px; padding-right: 0px;}
+  header li:nth-last-child( 1 ) {padding-right: 18px;}
+
+  header{height: 50px;}
+  header h1 {  line-height: 50px; background-image: url("../img/logo_m.png"); background-repeat: no-repeat; background-size: 84px 18px;  height: 50px; background-position: center;}
+  .menu li {height: 50px; font-size: 18px;}
+  .menu a {line-height: 50px; }
+
+  /* header end */
+
+}
+
+
+
+  @media (min-width: 320px) and (max-width: 767px) {
+    .wrap { padding-left: 15px; padding-right: 15px;}
+     header .wrap {padding-left: 0px; padding-right: 0px;}
+     header{height: 50px;}
+     header h1 {line-height: 50px; background-image: url("../img/logo_m.png"); background-repeat: no-repeat; background-size: 84px 18px;
+      height: 50px; background-position: center;} .menu li {height: auto; font-size: 22px; color: #333; padding: 0px;}
+
+    .menu {
+      /* display: none; */
+      display: grid;
+      text-align: center;
+      padding: 10px 0px;
+      grid-template-rows: 36px 36px 36px;
+      position: absolute;
+      top: 50px;
+      left:0;
+      bottom: 0;
+      width: 100%;
+      margin:0;
+      background-color: #fff;
+      height: 108px;
+    }
+
+    .menu a {  line-height: 36px;  display: block; }
+
+
+    .gnb_menu{
+        display: block;
+        position: absolute;
+        top: 0px;
+        right:0px;
+        width: 46px;
+        height: 50px;
+        color: transparent;
+        background-image: url('../img/icon_menu.png');
+        background-repeat: no-repeat;
+        background-size: 16px 16px;
+        background-position: 15px;
+      }
+
+
+    /* header end */
+    section {padding: 15px 0px;}
+    section ul {margin-right: 0px; margin-bottom: 10px; width: 100%;  }
+    section h1 {margin-bottom: 15px;}
+
+
+    footer li {
+      margin-left: 14px;
+    }
+
+  }
