--- a/portfolio/css/portfolio.css
+++ b/portfolio/css/portfolio.css
@@ -150,19 +150,17 @@ section { background:pink; font-size: 14px;color:#666; padding: 40px 0px;}
 section h1 {
   font-size: 36px; color: #333;
   width: 100%;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   float: left;
-  height: 50px;
-  line-height: 50px;
+  line-height: 36px;
 }
 
 section .info {
-  height: 140px;
+  float: left;
+  margin-bottom: 40px;
 }
 
 section ul {
-  float: left;
-  margin-right: 200px;
   margin-bottom: 10px;
 }
 
@@ -171,8 +169,30 @@ section li {
   width:100px;
 }
 
-section h3 {
+section ul:nth-child(2n-1) {
+  width: 40%;
+  float: left;
+}
+
+section ul:nth-child(2n) {
+  width: 35%;
+  float: right;
+}
+
+section dt {
+  font-size: 16px;
+  color: #333;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+section dl{
   margin-top: 40px;
+  float: left;
+}
+
+section dd a {
+  color: #3b9a7b
 }
 
 
@@ -201,25 +221,8 @@ footer ul { display: inline-block; line-height: 50px; font-size: 14px; color:#33
 footer li { float: left; margin-left: 30px; }
 
 
-.detail_contents a:nth-child(n+1) {
-  margin-left: 10px;
-}
-
-.vertical_bar {
-  width: 10px;
-}
-
-footer ul:after {
-  display: block;
-  clear:both;
-  content:'';
-}
-
-footer li:first-child {margin-left: 0px;}
 
 /* footer end */
-
-
 
 
 
@@ -238,59 +241,108 @@ footer li:first-child {margin-left: 0px;}
 
   /* header end */
 
+  section {padding: 15px 0px;}
+
+
+  section ul:nth-child(2n-1) {
+    width: 40%;
+    float: left;
+  }
+
+  section ul:nth-child(2n) {
+    width: 45%;
+    float: right;
+  }
+
+
 }
 
 
 
-  @media (min-width: 320px) and (max-width: 767px) {
-    .wrap { padding-left: 15px; padding-right: 15px;}
-     header .wrap {padding-left: 0px; padding-right: 0px;}
-     header{height: 50px;}
-     header h1 {line-height: 50px; background-image: url("../img/logo_m.png"); background-repeat: no-repeat; background-size: 84px 18px;
-      height: 50px; background-position: center;} .menu li {height: auto; font-size: 22px; color: #333; padding: 0px;}
+@media (min-width: 320px) and (max-width: 767px) {
+  .wrap { padding-left: 15px; padding-right: 15px;}
+  header .wrap {padding-left: 0px; padding-right: 0px;}
+  header{height: 50px;}
+  header h1 {line-height: 50px; background-image: url("../img/logo_m.png"); background-repeat: no-repeat; background-size: 84px 18px;
+  height: 50px; background-position: center;} .menu li {height: auto; font-size: 22px; color: #333; padding: 0px;}
 
-    .menu {
-      /* display: none; */
-      display: grid;
-      text-align: center;
-      padding: 10px 0px;
-      grid-template-rows: 36px 36px 36px;
-      position: absolute;
-      top: 50px;
-      left:0;
-      bottom: 0;
-      width: 100%;
-      margin:0;
-      background-color: #fff;
-      height: 108px;
-    }
-
-    .menu a {  line-height: 36px;  display: block; }
-
-
-    .gnb_menu{
-        display: block;
-        position: absolute;
-        top: 0px;
-        right:0px;
-        width: 46px;
-        height: 50px;
-        color: transparent;
-        background-image: url('../img/icon_menu.png');
-        background-repeat: no-repeat;
-        background-size: 16px 16px;
-        background-position: 15px;
-      }
-
-
-    /* header end */
-    section {padding: 15px 0px;}
-    section ul {margin-right: 0px; margin-bottom: 10px; width: 100%;  }
-    section h1 {margin-bottom: 15px;}
-
-
-    footer li {
-      margin-left: 14px;
-    }
-
+  .menu {
+    display: none;
+    /* display: grid; */
+    text-align: center;
+    padding: 10px 0px;
+    grid-template-rows: 36px 36px 36px;
+    position: absolute;
+    top: 50px;
+    left:0;
+    bottom: 0;
+    width: 100%;
+    margin:0;
+    background-color: #fff;
+    height: 108px;
   }
+
+  .menu a {  line-height: 36px;  display: block; }
+
+
+  .gnb_menu{
+    display: block;
+    position: absolute;
+    top: 0px;
+    right:0px;
+    width: 46px;
+    height: 50px;
+    color: transparent;
+    background-image: url('../img/icon_menu.png');
+    background-repeat: no-repeat;
+    background-size: 16px 16px;
+    background-position: 15px;
+  }
+
+
+  /* header end */
+  section {padding: 15px 0px;}
+
+  section .info {
+    padding-right: 50px;
+  }
+
+
+  section ul:nth-child(2n-1) {
+    width: calc(100% - 30px);
+    float: left;
+  }
+
+  section ul:nth-child(2n) {
+    width: 100%;
+    float: right;
+  }
+
+  section li:nth-child(2n) {
+    float: right;
+  }
+  .li-4n {
+    padding-right: 30px!important;
+  }
+
+
+
+
+
+
+
+}
+
+
+
+
+
+
+
+
+
+footer li {
+  margin-left: 14px;
+}
+
+}
