--- a/projectC/css/test.css
+++ b/projectC/css/test.css
@@ -201,7 +201,7 @@ ul {list-style: none;font-size: 12px; line-height: 14px; text-align: center;}
 
 .info {display:none;position: absolute; background: #fff; width: 316px; height: 60px; bottom: 0px; color: #fff;  overflow: hidden; }
 
-.title { font-size: 18px; line-height: 60px; color: #333;padding: 0 5px; overflow: hidden; text-overflow: ellipsis;  white-space: nowrap; }
+.title { font-size: 18px; line-height: 60px; color: #333; overflow: hidden; text-overflow: ellipsis;  white-space: nowrap; }
 
 .thumbnail_area button {background: #fff;background-image: url('../img/icon_arrow_more.png');background-repeat: no-repeat; background-position: 46.5% 50%; background-size:16px 16px;
  font-size: 16px; color:#333;cursor: pointer;  width: 100%; height: 60px; border: 1px solid rgba(0, 0, 0, 0.1);}
@@ -220,7 +220,7 @@ ul {list-style: none;font-size: 12px; line-height: 14px; text-align: center;}
 
 .message_form_content {float: left; width: 340px; margin-top: 80px; background-color: #f4f5f7;}
 
-.message_form_content h2{font-size: 42px;line-height: 52px; margin-bottom: 20px; color: #333; font-weight: normal;}
+.message_form_content h3{font-size: 42px;line-height: 52px; margin-bottom: 20px; color: #333; font-weight: normal;}
 
 .message_form strong {font-size: 18px; color: #333; font-weight: normal;}
 
@@ -265,11 +265,11 @@ ul {list-style: none;font-size: 12px; line-height: 14px; text-align: center;}
 float: right; top: -395px; left: auto;
 }
 
-.message_form select { width: 45%; height: auto; float: left; padding-bottom: 10px; }
+.message_form select { width: calc(50% - 25px); height: auto; float: left; padding-bottom: 10px; }
 
-.message_form .at { float: left; text-align: center; line-height: 15px; width:10% }
+.message_form .at { float: left; text-align: center; line-height: 15px; width:50px; }
 
-.message_form input[type~="email"] { width: 45%; float: left; }
+.message_form input[type~="email"] { width: calc(50% - 25px); float: left; }
 
 
 /* massage end */
@@ -283,14 +283,14 @@ float: right; top: -395px; left: auto;
 .notice button { float: right; cursor: pointer; border: none; font-size: 14px; color: #333;  background: #f0f0f0;
 line-height: 35px; }
 
-.notice h3{
+.notice h4{
   font-size: 16px;
   color: #333;
 }
 
 .notice_content {  height: 35px;  line-height: 35px; }
 
-.notice_content h3{ display: inline-block; }
+.notice_content h4{ display: inline-block; }
 
 .notice_sub_title strong { float: left; font-size: 14px; color: #333; font-weight: normal; }
 
@@ -386,7 +386,7 @@ footer li:first-child {margin-left: 0px;}
 
 .thumbnail_area {background: #f0f0f0;}
 
-.main_list img {width: 100%;}
+.main_list img {width: 100%; height: 100%;}
 
 .main_list li {float: left; width: auto; height: auto; margin-bottom: 70px;}
 
@@ -408,7 +408,7 @@ footer li:first-child {margin-left: 0px;}
 .info {display:block; position: absolute; background: #f0f0f0; width: 100%; height: 50px; bottom: -50px;
 color: #fff; margin-bottom: 0px; }
 
-.title { font-size: 18px; line-height: 50px; color: #333;padding: 0 5px;
+.title { font-size: 18px; line-height: 50px; color: #333;
   overflow: hidden; text-overflow: ellipsis;  white-space: nowrap; }
 
 .thumbnail_area button { background-position: calc(50% - 35px) 50%; }
@@ -427,7 +427,7 @@ color: #fff; margin-bottom: 0px; }
 .message_form_content {
   float: none;width: inherit;margin-top: 0px;    margin-bottom: 20px;text-align: center;}
 
-.message_form_content h2 {
+.message_form_content h3 {
 width: inherit; font-size: 30px; margin-bottom: 0px;}
 
 
@@ -526,7 +526,7 @@ float: none; margin-top: 0px; width: inherit;
 
 .thumbnail_area { padding: 0px 15px 0px 15px;}
 
-.main_list img {width: 100%;}
+.main_list img {width: 100%; height: 100%;}
 
 .main_list li {float: left; width: auto; height: auto; margin-bottom: 55px;}
 
@@ -549,7 +549,7 @@ float: none; margin-top: 0px; width: inherit;
 .info {display:block; position: absolute; background: #f0f0f0; width: 100%; height: 40px; bottom: -40px;
 color: #fff; margin-bottom: 0px; }
 
-.title { font-size: 14px; line-height: 40px; color: #333;padding: 0 5px;
+.title { font-size: 14px; line-height: 40px; color: #333;
   overflow: hidden; text-overflow: ellipsis;  white-space: nowrap; }
 
 .thumbnail_area button { background-position: calc(50% - 35px) 50%;  margin-bottom: 20px}
@@ -590,7 +590,7 @@ color: #fff; margin-bottom: 0px; }
 .message_form_content {
   float: none;width: inherit;margin-top: 0px;    margin-bottom: 20px;text-align: center;}
 
-.message_form_content h2 {
+.message_form_content h3 {
 width: inherit; font-size: 22px; margin-bottom: 0px;}
 
 .message_form strong {
@@ -621,11 +621,11 @@ float: none; margin-top: 0px; width: inherit; height: 420px;
   line-height: 25px;
 }
 
-.notice_title h3{
+.notice_title h4{
 font-size: 16px;
 }
 
-.notice_content h3 {
+.notice_content h4 {
 
   display: block;
 }
